# youtube-playlists

./: .gitignore  README.md  main.py  playlists_duracao.parquet  pyproject.toml  readparquet.py  requirements.txt
src/youtube_playlists/: __init__.py
